[package]
name = "amr-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Auth / Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"

# HTTP client (Stripe API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Middleware utilities
pin-project-lite = "0.2"
