[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrmemory"
version = "0.1.0"
description = "Agent Memory Relay — persistent long-term memory for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "MrMemory", email = "support@mrmemory.dev" }]
keywords = ["ai", "agents", "memory", "llm", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.22", "ruff>=0.8", "mypy>=1.13"]

[project.urls]
Homepage = "https://mrmemory.dev"
Documentation = "https://mrmemory.dev/docs"
Repository = "https://github.com/masterdarren23/mrmemory"

[tool.hatch.build.targets.wheel]
packages = ["src/amr", "src/mrmemory"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
